--- a/src/components/home.module.css
+++ b/src/components/home.module.css
@@ -33,3 +33,9 @@
   flex-direction: column;
   align-items: center; /* Center the park button and its extension */
 }
+
+.refreshButtonContainer {
+  display: flex;
+  justify-content: center;
+  margin: 10px 0; /* Adjust margin as needed */
+}
