--- a/src/components/home.module.css
+++ b/src/components/home.module.css
@@ -39,3 +39,23 @@
   justify-content: center;
   margin: 10px 0; /* Adjust margin as needed */
 }
+
+.dropButtons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px; /* Adjust spacing as needed */
+}
+
+.footerButton {
+  width: 150px;
+  height: 50px;
+  font-size: 10px;
+  font-weight: bold;
+  margin: 0 10px;
+}
