--- a/src/components/home.module.css
+++ b/src/components/home.module.css
@@ -49,7 +49,8 @@
 .footer {
   display: flex;
   justify-content: center;
-  margin-top: 20px; /* Adjust spacing as needed */
+  margin-top: 20px;
+  gap: 20px;
 }
 
 .footerButton {
@@ -63,5 +64,45 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 10%;
+  margin-top: 20%;
+}
+
+/* Existing styles... */
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 0;
+}
+
+.mainButtons {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  margin: 20px 0;
+}
+
+
+.stationContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin: 20px 0;
+}
+
+.stationButtonWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.extensionButtonWrapper {
+  margin-top: 10px;
+}
+
+.footerButtonContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
